<resources>
    <string name="app_name">Homemade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signinfrag_title">Sign in with your phone number</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_otp">OTP</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="address_label_credentialsfrag">Address</string>
    <string name="hint_street_name">Street name</string>
    <string name="hint_building_name">Building Name</string>
    <string name="hint_locality">Locality</string>
    <string name="hint_city">City</string>
    <string name="hint_pincode">Pincode</string>
    <string name="send_otp">Send OTP</string>
    <string name="label_available_packs">Available packs</string>
    <string name="sample_description_available_packs">A pocket friendly daily meal package for hostellers. The premium quality food is delivered at your doorstep with no delivery charges. Daily meal is available only at Rs. 47.</string>
    <string name="sample_name_available_packs">First Choice</string>
    <string name="sample_enroll_now_btn">Enroll now</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="proceed_text_cred">Proceed</string>
    <string name="send_otp_btn_text">Send OTP</string>
    <string name="sample_address">49,\nBlock C,\nBangur Avenue,\nKolkata - 700055</string>
    <string name="available_foods">Available foods</string>
    <string name="label_fragment_pack_contents">Pack Contents</string>
    <string name="label_your_packs">Your packs</string>
    <string name="label_fragment_skipped_orders">Skipped Orders</string>
    <string name="opt_out_meal_message">Choose day to opt out from a meal</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="unskip">Unskip</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="name_label">Name</string>
</resources>