<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        app:behavior_hideable="false"
        style="@style/AppBottomSheetDialogTheme"
        app:behavior_peekHeight="0dp"
        android:background="@drawable/bottom_sheet_bg"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/optoutbottomsheet_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_rounded_semibold"
                android:padding="@dimen/padding_15dp"
                android:text="@string/opt_out_meal_message"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <CalendarView
                android:id="@+id/calender_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/sf_pro_rounded_semibold"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/padding_7dp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp" />

                <TextView
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/sf_pro_rounded_semibold"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/padding_7dp"
                    android:text="@string/done"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
