<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/fog_green"
        android:layout_margin="@dimen/margin_8dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/card_radius_15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_pack_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/pack_thumbnail_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="@dimen/card_radius_15dp"
                app:layout_constraintHeight_percent="0.45"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1">

                <ImageView
                    android:id="@+id/pack_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dum_aloo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/pack_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:fontFamily="@font/sf_pro_rounded_semibold"
                android:text="@string/sample_name_available_packs"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pack_thumbnail_container" />

            <TextView
                android:id="@+id/pack_short_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:text="@string/sample_description_available_packs"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pack_name" />

            <TextView
                android:id="@+id/enroll_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sf_pro_rounded_semibold"
                android:text="@string/sample_enroll_now_btn"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pack_short_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
