<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/credentials_fragment"
        android:background="@color/dull_white"
        tools:context=".ui.fragments.CredentialsFragment">
                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/profile_pic_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/name_input_container"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/name_input_container">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profile_pic_cardView"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:cardCornerRadius="30dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/profile_pic_imageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />


                    </androidx.cardview.widget.CardView>


                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="-10dp"
                        android:src="@drawable/ic_add"
                        app:layout_anchor="@+id/profile_pic_cardView"
                        app:layout_anchorGravity="end|bottom" />
                </androidx.coordinatorlayout.widget.CoordinatorLayout>


                <LinearLayout
                    android:id="@+id/name_input_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_25dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profile_pic_container"
                    app:layout_constraintWidth_percent="0.62">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_first_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:layout_marginBottom="12dp"
                        app:hintTextAppearance="@style/hintTextStyle"
                        app:boxBackgroundColor="@color/dull_white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/EditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_last_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        app:hintTextAppearance="@style/hintTextStyle"
                        app:boxBackgroundColor="@color/dull_white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/EditTextStyle"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/adress_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:fontFamily="@font/sf_pro_rounded_semibold"
                    android:text="@string/adress_label_credentialsfrag"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_input_container" />


                <LinearLayout
                    android:id="@+id/adress_input_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_25dp"
                    android:layout_marginEnd="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_18dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/margin_25dp"
                    app:layout_constraintBottom_toTopOf="@+id/proceed_btn_credfrag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/adress_label">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_building_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_12dp"
                        android:hint="@string/hint_building_name"
                        app:boxBackgroundColor="@color/dull_white"
                        app:hintTextAppearance="@style/hintTextStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/EditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_street_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_street_name"
                        android:layout_marginBottom="@dimen/margin_12dp"
                        app:boxBackgroundColor="@color/dull_white"
                        app:hintTextAppearance="@style/hintTextStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/EditTextStyle" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_locality_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_12dp"
                        android:hint="@string/hint_locality"
                        app:boxBackgroundColor="@color/dull_white"
                        app:hintTextAppearance="@style/hintTextStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/EditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_city_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_city"
                        android:layout_marginBottom="@dimen/margin_12dp"
                        app:boxBackgroundColor="@color/dull_white"
                        app:hintTextAppearance="@style/hintTextStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/EditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_pincode_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pincode"
                        android:layout_marginBottom="@dimen/margin_12dp"
                        app:boxBackgroundColor="@color/dull_white"
                        app:hintTextAppearance="@style/hintTextStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/EditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/proceed_btn_credfrag"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.075"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintWidth_percent="0.75"
                    android:layout_marginBottom="@dimen/margin_20dp">
                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_rectangle_2"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size_16sp"

                        android:orientation="horizontal" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proceed_text_cred"
                            android:textAllCaps="false"
                            android:textSize="@dimen/text_size_16sp"

                            android:fontFamily="@font/sf_pro_rounded_bold"
                            android:textColor="@color/dull_white"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>

</layout>